<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_header">

        <EditTextPreference
            app:key="username"
            app:title="@string/username_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/view_header">

        <SwitchPreferenceCompat
            app:key="show_username"
            app:title="@string/show_username_title" />

        <SwitchPreferenceCompat
            app:key="show_date"
            app:title="@string/show_date_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Storage">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/storage_entries"
            android:entryValues="@array/storage_values"
            android:key="data_source"
            android:title="Data source" />
    </PreferenceCategory>

</PreferenceScreen>